# lasagnamailpy

./: .gitignore  README.md  pyproject.toml  setup.py
lasagnamail/: email.py
lasagnamail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
