[project]
name = "lasagnamail"
version = "0.0.1"
authors = [
  { name="TheBaconPug" },
]
description = "A wrapper for the site lasagna.email"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheBaconPug/lasagnamailpy"